--- a/source/pages/buygiftcards/buygiftcards.wxss
+++ b/source/pages/buygiftcards/buygiftcards.wxss
@@ -5,3 +5,15 @@
     height: 200rpx;
     border-radius: 12rpx;
 }
+/* pages/malldetail/malldetail.wxss */
+.sing_ddd{
+  width: 100%;
+  height: 100vh;
+  background: #f9f9f900;
+  position: fixed;
+  top: 0;
+  z-index: 555;
+}
+.sing_ddds{
+  display: none;
+}
