--- a/source/pages/myshouyi/myshouyi.wxml
+++ b/source/pages/myshouyi/myshouyi.wxml
@@ -30,7 +30,7 @@
         <view style="width: 336rpx; height: 140rpx; background-color: #fff; border-radius: 12rpx;display:flex;justify-content:center;align-items: center;" bindtap="navigateto" id="/pages/shouyimingxi/shouyimingxi">
             <view class="flex-row" style=" width: 270rpx;justify-content: space-between;">
                 <view>
-                    <view class="f-32" style="line-height: 44rpx;">收益明细</view>
+                    <view class="f-32">收益明细</view>
                     <view class="f-20 txt-66">查看收益明细</view>
                 </view>
                 <image style="width: 64rpx; height: 64rpx;" src="{{uploadpath}}resource/{{res.shoyimingxi}}"></image>
@@ -40,7 +40,7 @@
         <view style="width: 336rpx; height: 140rpx; background-color: #fff;border-radius: 12rpx;display:flex;justify-content:center;align-items: center;" bindtap="navigateback">
             <view class="flex-row" style=" width: 270rpx;justify-content: space-between;">
                 <view>
-                    <view class="f-32" style="line-height: 44rpx;">收益提现</view>
+                    <view class="f-32" >收益提现</view>
                     <view class="f-20 txt-66">立即去提现</view>
                 </view>
                 <image style="width: 64rpx; height: 64rpx;" src="{{uploadpath}}resource/{{res.shouyitixian}}"></image>
