--- a/source/pages/videolist/videolist.wxss
+++ b/source/pages/videolist/videolist.wxss
@@ -45,6 +45,12 @@
     margin: auto 20px;
 }
 .videoList{
+    width: 100%;
+    height: 100%;
     background: red;
     margin-top: 10px;
+}
+.videoList image{
+    width: 100%;
+   
 } */
