--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -1,60 +1,58 @@
 <!--pages/giftcards/giftcards.wxml-->
 
 <view class="flex-row flex-column" style="background-color: rgba(243, 246, 247, 1); position: relative; min-height: 100vh;">
-    <view class="flex-row navbox">
-        <view class="flex-1  flex-row flex-column" wx:for="{{typelist}}" wx:key='k' bindtap="switchtype" id="{{item.value}}">
-            <view class="f-28 text-center titlebox">{{item.name}}</view>
-            <view class="line {{item.value==flag?'line_color':''}}"></view>
-        </view>
+  <view class="flex-row navbox">
+    <view class="flex-1  flex-row flex-column" wx:for="{{typelist}}" wx:key='k' bindtap="switchtype" id="{{item.value}}">
+      <view class="f-28 text-center titlebox">{{item.name}}</view>
+      <view class="line {{item.value==flag?'line_color':''}}"></view>
     </view>
+  </view>
 
-    <view class="flex-row flex-column" style="display: {{flag == 'A' ? 'block' :'none'}}; min-height: 90vh; position: relative;">
-        <view class="flex-row kongbaitips min-height-90"  wx:if="{{cardlist.length<=0}}">
-                <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
-            </view>
-        <view wx:else style="margin-bottom: 92rpx; ">
-            <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
-                <image wx:if="{{item.cardtype == 'A'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item.cardcover_image}}"></image>
-                <image wx:if="{{item.cardtype == 'B'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item.cover}}"></image>
-                <view class="contentbox flex-1">
-                    <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
-                    <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.shiwukaprice}}</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：{{item.yue}}</view>
-                        <view class="f-24">{{item.isuse_name}}</view>
-                    </view>
-                    <view class="f-20 explain">{{item.explains}}</view>
-                </view>
-            </view>
-        </view>
-        <view class="flex-row  bottombox" style="justify-content:center;">
-            <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardbuyjilu/giftcardbuyjilu">购买记录</view>
-            <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-            <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/duihuanjilu/duihuanjilu">兑换记录</view>
-            <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-            <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshousongjilu/giftcardshousongjilu">收送记录</view>
-            <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
-            <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshiyongjilu/giftcardshiyongjilu">使用记录</view>
-        </view>
+  <view class="flex-row flex-column" style="display: {{flag == 'A' ? 'block' :'none'}}; min-height: 90vh;">
+    <view class="flex-row kongbaitips min-height-90" wx:if="{{cardlist.length<=0}}">
+      <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
     </view>
-
-
-    <view style="display: {{flag == 'B' ? 'block' :'none'}};">
-        <view class="flex-row flex-column" style=" background: rgba(255, 255, 255, 1); min-height:90vh; width: 100vw;">
-            <view style="width: 645rpx;">
-                <view style="margin-bottom: 180rpx;">
-                    <input id="{{}}" style="margin-top: 56rpx;" bindinput="bindKeyInput" class="inputbox" type="text" placeholder="请输入卡号" value="" />
-                    <input id="{{}}" bindinput="bindPawInput" class="inputbox" type="text" password placeholder="请输入卡密" value="" />
-                    <view class="text">兑换须知</view>
-                    <view style="margin-bottom: 40rpx;">instinfo</view>
-                    <view class="text">使用须知</view>
-                    <view>{{instinfo.cardused}}
-                    </view>
-                </view>
-                <button bindtap="giftCardExhange" class="pay butcolor">确认兑换</button>
-            </view>
-
+    <view wx:else >
+      <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
+        <image wx:if="{{item.cardtype == 'A'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item.cardcover_image}}"></image>
+        <image wx:if="{{item.cardtype == 'B'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item.cover}}"></image>
+        <view class="contentbox flex-1">
+          <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
+          <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.shiwukaprice}}</view>
+          <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+            <view class="f-24">余额：{{item.yue}}</view>
+            <view class="f-24">{{item.isuse_name}}</view>
+          </view>
+          <view class="f-20 explain">{{item.explains}}</view>
         </view>
+      </view>
     </view>
+    <view class="flex-row" style="align-items: center;justify-content:center;margin: 41rpx 0">
+      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardbuyjilu/giftcardbuyjilu">购买记录</view>
+      <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/duihuanjilu/duihuanjilu">兑换记录</view>
+      <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshousongjilu/giftcardshousongjilu">收送记录</view>
+      <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+      <view class="f-24 bottomcontrnt" bindtap="navigateto" id="/pages/giftcardshiyongjilu/giftcardshiyongjilu">使用记录</view>
+    </view>
+  </view>
+  <view style="display: {{flag == 'B' ? 'block' :'none'}};">
+    <view class="flex-row flex-column" style=" background: rgba(255, 255, 255, 1); min-height:90vh; width: 100vw;">
+      <view style="width: 645rpx;">
+        <view style="margin-bottom: 180rpx;">
+          <input id="{{}}" style="margin-top: 56rpx;" bindinput="bindKeyInput" class="inputbox" type="text" placeholder="请输入卡号" value="" />
+          <input id="{{}}" bindinput="bindPawInput" class="inputbox" type="text" password placeholder="请输入卡密" value="" />
+          <view class="text">兑换须知</view>
+          <view style="margin-bottom: 40rpx;">instinfo</view>
+          <view class="text">使用须知</view>
+          <view>{{instinfo.cardused}}
+          </view>
+        </view>
+        <button bindtap="giftCardExhange" class="pay butcolor">确认兑换</button>
+      </view>
+
+    </view>
+  </view>
 
 </view>
